-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs24
-
Component/s: hotspot
-
Environment:
-
b49
-
sparc
-
solaris
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8017755 | 8 | Unassigned | P2 | Closed | Fixed | b96 |
| JDK-8016187 | hs25 | Morris Meyer | P2 | Closed | Fixed | b38 |
during PIT of hs25-b34 for jdk8-b92 compiler/8010927/Test8010927.java triggers assert:
;; Using jvm: "/export/local/aurora/sandbox/sca/vmsqe/jdk/pit/2013-05-24-162747.amurillo.hs25-b34-snapshot/fastdebug/solaris-sparc/jre/lib/sparc/client/libjvm.so"
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/tmp/jprt/P1/162747.amurillo/s/src/cpu/sparc/vm/assembler_sparc.hpp:359), pid=12868, tid=15
# assert(nbits == 32 || (-(1 << nbits-1) <= x && x < ( 1 << nbits-1))) failed: value out of range: x=0x00000934, nbits=12
#
# JRE version: Java(TM) SE Runtime Environment (8.0-b91) (build 1.8.0-ea-fastdebug-b91)
# Java VM: Java HotSpot(TM) Client VM (25.0-b34-internal-201305241627.amurillo.hs25-b34-snapshot-fastdebug compiled mode solaris-sparc )
# Core dump written. Default location: /export/local/aurora/sandbox/results/workDir/compiler/8010927/Test8010927/core or core.12868
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
Stack: [0xf65c0000,0xf6640000], sp=0xf663ecb0, free space=507k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xc12100] void VMError::report_and_die()+0x870;; __1cHVMErrorOreport_and_die6M_v_+0x870
V [libjvm.so+0x4531cc] void report_vm_error(const char*,int,const char*,const char*)+0x74;; __1cPreport_vm_error6Fpkci11_v_+0x74
V [libjvm.so+0x1ee75c] void Assembler::assert_signed_range(int,int)+0x78;; __1cJAssemblerTassert_signed_range6Fii_v_+0x78
V [libjvm.so+0x8ea080] int Assembler::wdisp10(int,int)+0x74;; __1cJAssemblerHwdisp106Fii_i_+0x74
V [libjvm.so+0x8b448c] int MacroAssembler::patched_branch(int,int,int)+0x228;; __1cOMacroAssemblerOpatched_branch6Fiii_i_+0x228
V [libjvm.so+0x19b4c4] void AbstractAssembler::bind(Label&)+0x308;; __1cRAbstractAssemblerEbind6MrnFLabel__v_+0x308
V [libjvm.so+0x1e91ec] void NewInstanceStub::emit_code(LIR_Assembler*)+0x30;; __1cPNewInstanceStubJemit_code6MpnNLIR_Assembler__v_+0x30
V [libjvm.so+0x251a78] void LIR_Assembler::emit_stubs(CodeStubList*)+0x13c;; __1cNLIR_AssemblerKemit_stubs6MpnMCodeStubList__v_+0x13c
V [libjvm.so+0x1f12d8] void Compilation::emit_code_epilog(LIR_Assembler*)+0x38;; __1cLCompilationQemit_code_epilog6MpnNLIR_Assembler__v_+0x38
V [libjvm.so+0x1f15c4] int Compilation::emit_code_body()+0x13c;; __1cLCompilationOemit_code_body6M_i_+0x13c
V [libjvm.so+0x1f1d9c] int Compilation::compile_java_method()+0x724;; __1cLCompilationTcompile_java_method6M_i_+0x724
V [libjvm.so+0x1f2028] void Compilation::compile_method()+0xb0;; __1cLCompilationOcompile_method6M_v_+0xb0
V [libjvm.so+0x1f2b58] Compilation::Compilation(AbstractCompiler*,ciEnv*,ciMethod*,int,BufferBlob*)+0x2e4;; __1cLCompilation2t6MpnQAbstractCompiler_pnFciEnv_pnIciMethod_ipnKBufferBlob__v_+0x2e4
V [libjvm.so+0x1f553c] void Compiler::compile_method(ciEnv*,ciMethod*,int)+0x160;; __1cICompilerOcompile_method6MpnFciEnv_pnIciMethod_i_v_+0x160
V [libjvm.so+0x3e3d88] void CompileBroker::invoke_compiler_on_method(CompileTask*)+0x4f8;; __1cNCompileBrokerZinvoke_compiler_on_method6FpnLCompileTask__v_+0x4f8
V [libjvm.so+0x3e3278] void CompileBroker::compiler_thread_loop()+0x56c;; __1cNCompileBrokerUcompiler_thread_loop6F_v_+0x56c
V [libjvm.so+0xb7d9b8] void JavaThread::thread_main_inner()+0x264;; __1cKJavaThreadRthread_main_inner6M_v_+0x264
V [libjvm.so+0xb7d6fc] void JavaThread::run()+0x394;; __1cKJavaThreadDrun6M_v_+0x394
V [libjvm.so+0x9dc49c] java_start+0x17c;; java_start+0x17c
;; Using jvm: "/export/local/aurora/sandbox/sca/vmsqe/jdk/pit/2013-05-24-162747.amurillo.hs25-b34-snapshot/fastdebug/solaris-sparc/jre/lib/sparc/client/libjvm.so"
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/tmp/jprt/P1/162747.amurillo/s/src/cpu/sparc/vm/assembler_sparc.hpp:359), pid=12868, tid=15
# assert(nbits == 32 || (-(1 << nbits-1) <= x && x < ( 1 << nbits-1))) failed: value out of range: x=0x00000934, nbits=12
#
# JRE version: Java(TM) SE Runtime Environment (8.0-b91) (build 1.8.0-ea-fastdebug-b91)
# Java VM: Java HotSpot(TM) Client VM (25.0-b34-internal-201305241627.amurillo.hs25-b34-snapshot-fastdebug compiled mode solaris-sparc )
# Core dump written. Default location: /export/local/aurora/sandbox/results/workDir/compiler/8010927/Test8010927/core or core.12868
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
Stack: [0xf65c0000,0xf6640000], sp=0xf663ecb0, free space=507k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xc12100] void VMError::report_and_die()+0x870;; __1cHVMErrorOreport_and_die6M_v_+0x870
V [libjvm.so+0x4531cc] void report_vm_error(const char*,int,const char*,const char*)+0x74;; __1cPreport_vm_error6Fpkci11_v_+0x74
V [libjvm.so+0x1ee75c] void Assembler::assert_signed_range(int,int)+0x78;; __1cJAssemblerTassert_signed_range6Fii_v_+0x78
V [libjvm.so+0x8ea080] int Assembler::wdisp10(int,int)+0x74;; __1cJAssemblerHwdisp106Fii_i_+0x74
V [libjvm.so+0x8b448c] int MacroAssembler::patched_branch(int,int,int)+0x228;; __1cOMacroAssemblerOpatched_branch6Fiii_i_+0x228
V [libjvm.so+0x19b4c4] void AbstractAssembler::bind(Label&)+0x308;; __1cRAbstractAssemblerEbind6MrnFLabel__v_+0x308
V [libjvm.so+0x1e91ec] void NewInstanceStub::emit_code(LIR_Assembler*)+0x30;; __1cPNewInstanceStubJemit_code6MpnNLIR_Assembler__v_+0x30
V [libjvm.so+0x251a78] void LIR_Assembler::emit_stubs(CodeStubList*)+0x13c;; __1cNLIR_AssemblerKemit_stubs6MpnMCodeStubList__v_+0x13c
V [libjvm.so+0x1f12d8] void Compilation::emit_code_epilog(LIR_Assembler*)+0x38;; __1cLCompilationQemit_code_epilog6MpnNLIR_Assembler__v_+0x38
V [libjvm.so+0x1f15c4] int Compilation::emit_code_body()+0x13c;; __1cLCompilationOemit_code_body6M_i_+0x13c
V [libjvm.so+0x1f1d9c] int Compilation::compile_java_method()+0x724;; __1cLCompilationTcompile_java_method6M_i_+0x724
V [libjvm.so+0x1f2028] void Compilation::compile_method()+0xb0;; __1cLCompilationOcompile_method6M_v_+0xb0
V [libjvm.so+0x1f2b58] Compilation::Compilation(AbstractCompiler*,ciEnv*,ciMethod*,int,BufferBlob*)+0x2e4;; __1cLCompilation2t6MpnQAbstractCompiler_pnFciEnv_pnIciMethod_ipnKBufferBlob__v_+0x2e4
V [libjvm.so+0x1f553c] void Compiler::compile_method(ciEnv*,ciMethod*,int)+0x160;; __1cICompilerOcompile_method6MpnFciEnv_pnIciMethod_i_v_+0x160
V [libjvm.so+0x3e3d88] void CompileBroker::invoke_compiler_on_method(CompileTask*)+0x4f8;; __1cNCompileBrokerZinvoke_compiler_on_method6FpnLCompileTask__v_+0x4f8
V [libjvm.so+0x3e3278] void CompileBroker::compiler_thread_loop()+0x56c;; __1cNCompileBrokerUcompiler_thread_loop6F_v_+0x56c
V [libjvm.so+0xb7d9b8] void JavaThread::thread_main_inner()+0x264;; __1cKJavaThreadRthread_main_inner6M_v_+0x264
V [libjvm.so+0xb7d6fc] void JavaThread::run()+0x394;; __1cKJavaThreadDrun6M_v_+0x394
V [libjvm.so+0x9dc49c] java_start+0x17c;; java_start+0x17c
- backported by
-
JDK-8016187 assert(nbits == 32 || (-(1 << nbits-1) <= x && x < ( 1 << nbits-1))) failed: value out of range
-
- Closed
-
-
JDK-8017755 assert(nbits == 32 || (-(1 << nbits-1) <= x && x < ( 1 << nbits-1))) failed: value out of range
-
- Closed
-
- duplicates
-
JDK-8017058 SIGSEGV in compiled java.util.jar.JarFile.isKnownToNotHaveClassPathAttribute()Z
-
- Closed
-