8015437: SPARC cbcond branch offset out of 10-bit range

Forced SPARC MacroAssembler eden_alloate to use long branch to slow case

Reviewed-by: kvn, twisti